--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ html {
     color: #212121;
     font-size: 24px;
     text-align: center;
+    margin: 0 auto;
     position: relative;
     top: 150px;
-    left: 500px;
     width: 430px;
     background-color: #009688;
     padding-left: 20px;
