--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 html {
     margin: 0 auto;
+    height: 100%;
 }
 
 .bg {
@@ -28,7 +29,7 @@ html {
     margin: 0 auto;
     position: relative;
     top: 150px;
-    width: 430px;
+    width: 450px;
     background-color: #009688;
     padding-left: 20px;
     padding-right: 20px;
@@ -81,16 +82,19 @@ html {
     background-size: contain;
     position: relative;
     bottom: 325px;
-    left: 830px;
+    left: 820px;
 }
 
 .leipzig {
-     background-image: url(img/leipziz.jpg);
-     height: 150px;
-     width: auto;
-     background-repeat: no-repeat;
-     background-size: contain;
-     position: relative;
-     bottom: 202px;
-     left: -235px;
+    background-image: url(img/leipziz.jpg);
+    height: 150px;
+    width: auto;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: relative;
+    bottom: 202px;
+    left: -210px;
+    border-radius: 25px;
+    border-bottom-right-radius: 25px;
+
 }
