--- a/style.css
+++ b/style.css
@@ -4,8 +4,15 @@
 }
 
 html {
-    margin: 0 auto;
-    height: 100%;
+    margin: 0;
+    height: 100vh;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .bg {
@@ -15,8 +22,8 @@ html {
     background-position: center;
     position: absolute;
     top: 00px;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: -1;
     opacity: 45%;
 }
@@ -26,25 +33,26 @@ html {
     color: #212121;
     font-size: 24px;
     text-align: center;
-    margin: 0 auto;
-    position: relative;
-    top: 150px;
-    width: 450px;
+    margin-top: 200px;
     background-color: #009688;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
 }
 
 .slider {
-    width: 800px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin: 0 auto;
+    margin-top: 35vh;
+}
+
+.slidebar {
+    width: 50vw;
     height: 60px;
     background-color: #CDDC39;
     border-radius: 25px;
     border: 5px solid #212121;
-    margin: 0 auto;
-    margin-top: 30%;
+    flex-shrink: 6;
 }
 
 .diman {
@@ -52,7 +60,7 @@ html {
     width: 200px;
     height: 150px;
     position: relative;
-    left: var(--diman);
+    left: calc(var(--diman) - 55px);
     top: -50px;
     background-size: contain;
     background-repeat: no-repeat;
@@ -79,21 +87,15 @@ html {
     width: 150px;
     background-repeat: no-repeat;
     background-size: contain;
-    position: relative;
-    bottom: 325px;
-    left: 820px;
 }
 
 .leipzig {
     background-image: url(img/leipziz.jpg);
-    height: 150px;
-    width: auto;
+    height: 100px;
+    width: 150px;
     background-repeat: no-repeat;
     background-size: contain;
-    position: relative;
-    bottom: 202px;
-    left: -210px;
-    border-radius: 25px;
-    border-bottom-right-radius: 25px;
-
+    border-radius: 10px;
 }
+
+;
