--- a/style.css
+++ b/style.css
@@ -98,4 +98,8 @@ body {
     border-radius: 10px;
 }
 
-;
+@media (max-height: 360px) and (orientation: landscape) {
+    .slider {
+        margin-top: 10vh;
+    }
+}
