--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-@media screen and (min-width: 200px) and (max-width: 500px) {
-    .content .result {
-        width: 80%;
-        font-size: 36px;
-        color: white;
-    }
-}
-
 :root {
     --diman: = 0%;
     --bcg = '';
@@ -146,10 +138,119 @@ footer a:hover {
     background-size: cover;
 }
 
-@media screen and (min-width: 200px) and (max-width: 500px) {
-    .content .result {
-        width: 80%;
-        font-size: 36px;
+@media screen and (max-width: 425px) {
+    .result {
+        width: 85vw;
+        height: 19vh;
+        font-size: 32px;
         color: white;
+        margin: 0;
     }
+
+    html {
+        margin: 0;
+        height: 100vh;
+        display: flex;
+    }
+
+    body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        margin: 0;
+    }
+
+    .content {
+        flex: 1 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: inherit;
+    }
+
+    .slider {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        margin: 0 auto;
+        margin-top: 25vh;
+    }
+
+    .slidebar {
+        width: 50vw;
+        height: 30px;
+        background-color: #CDDC39;
+        border-radius: 25px;
+        border: 5px solid #212121;
+        flex-shrink: 6;
+    }
+
+    .diman {
+        background-image: url("img/diman.png");
+        width: 100px;
+        height: 150px;
+        position: relative;
+        left: calc(var(--diman) - 55px);
+        top: -25px;
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
+    .diman:hover .quote {
+        display: inline-block;
+    }
+
+    .divan {
+        background-image: url("img/divan.png");
+        height: 50px;
+        width: 80px;
+        background-repeat: no-repeat;
+        background-size: contain;
+    }
+
+    .leipzig {
+        background-image: url(img/leipziz.jpg);
+        height: 50px;
+        width: 65px;
+        background-repeat: no-repeat;
+        background-size: contain;
+        border-radius: 10px;
+    }
+
+    footer {
+        flex: 0 0 auto;
+        width: 100vw;
+        background-color: #00796B;
+        height: 7vh;
+    }
+
+    footer a {
+        float: right;
+        margin-right: 5%;
+        color: white;
+        font-size: 16px;
+        margin-top: 1vh;
+        text-decoration: none;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-end;
+    }
+
+    footer a:hover {
+        color: #CDDC39;
+        text-decoration: underline;
+    }
+
+    .git-img {
+        background-image: url("img/git.png");
+        width: 82px;
+        height: 45px;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
 }
